--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^22.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "axios": "^0.20.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
@@ -11,6 +13,7 @@
     "react-codepen": "^0.1.0",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.3",
